<resources>
    <string name="app_name">Calculator_MVC</string>
    <string name="btMainParenthesis">( )</string>
    <string name="btMainChangeSign">&#177;</string>

    <!-- Set of Operations -->
    <string name="btMainClear">&#65;&#67;</string>
    <string name="btMainPercentage">&#37;</string>
    <string name="btMainDivision">&#247;</string>
    <string name="btMainMultiplication">&#215;</string>
    <string name="btMainPlus">&#43;</string>
    <string name="btMainMinus">&#45;</string>
    <string name="btMainEqual">&#61;</string>
    <string name="btMainDelete">&#60;</string>

    <!-- Set of Digit Numbers -->
    <string name="btMainDot">&#183;</string>
    <string name="btMainZero">0</string>
    <string name="btMainOne">1</string>
    <string name="btMainTwo">2</string>
    <string name="btMainThree">3</string>
    <string name="btMainFour">4</string>
    <string name="btMainFive">5</string>
    <string name="btMainSix">6</string>
    <string name="btMainSeven">7</string>
    <string name="btMainEight">8</string>
    <string name="btMainNine">9</string>
    <string name="btMainHint">0</string>
</resources>