<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181C1F"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMainExpression"
        style="@style/TextViewStyle"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="@dimen/tvMainExpression"
        app:layout_constraintBottom_toTopOf="@+id/tvMainCurrentResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvMainCurrentResults"
        style="@style/TextViewStyle"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="@dimen/tvMainCurrentResults"
        app:layout_constraintBottom_toTopOf="@+id/llMainKeys"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMainExpression"/>

    <LinearLayout
        android:id="@+id/llMainKeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMainCurrentResults">

        <LinearLayout style="@style/LinearLayoutStyle">

            <Button
                android:id="@+id/btMainClear"
                style="@style/ClearStyle"
                android:text="@string/btMainClear" />

            <Button
                android:id="@+id/btMainParenthesis"
                style="@style/OperationStyle"
                android:text="@string/btMainParenthesis" />

            <Button
                android:id="@+id/btMainPercentage"
                style="@style/OperationStyle"
                android:text="@string/btMainPercentage" />

            <Button
                android:id="@+id/btMainDivision"
                style="@style/OperationStyle"
                android:text="@string/btMainDivision" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutStyle">

            <Button
                android:id="@+id/btMainSeven"
                style="@style/NumbersStyle"
                android:text="@string/btMainSeven" />

            <Button
                android:id="@+id/btMainEight"
                style="@style/NumbersStyle"
                android:text="@string/btMainEight" />

            <Button
                android:id="@+id/btMainNine"
                style="@style/NumbersStyle"
                android:text="@string/btMainNine" />

            <Button
                android:id="@+id/btMainMultiplication"
                style="@style/OperationStyle"
                android:text="@string/btMainMultiplication" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutStyle">

            <Button
                android:id="@+id/btMainFour"
                style="@style/NumbersStyle"
                android:text="@string/btMainFour" />

            <Button
                android:id="@+id/btMainFive"
                style="@style/NumbersStyle"
                android:text="@string/btMainFive" />

            <Button
                android:id="@+id/btMainSix"
                style="@style/NumbersStyle"
                android:text="@string/btMainSix" />

            <Button
                android:id="@+id/btMainMinus"
                style="@style/OperationStyle"
                android:text="@string/btMainMinus" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutStyle">

            <Button
                android:id="@+id/btMainOne"
                style="@style/NumbersStyle"
                android:text="@string/btMainOne" />

            <Button
                android:id="@+id/btMainTwo"
                style="@style/NumbersStyle"
                android:text="@string/btMainTwo" />

            <Button
                android:id="@+id/btMainThree"
                style="@style/NumbersStyle"
                android:text="@string/btMainThree" />

            <Button
                android:id="@+id/btMainPlus"
                style="@style/OperationStyle"
                android:text="@string/btMainPlus" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutStyle">

            <Button
                android:id="@+id/btMainZero"
                style="@style/NumbersStyle"
                android:text="@string/btMainZero" />

            <Button
                android:id="@+id/btMainDot"
                style="@style/NumbersStyle"
                android:text="@string/btMainDot"/>

            <Button
                android:id="@+id/btMainRet"
                style="@style/NumbersStyle"
                android:text="@string/btMainDelete" />

            <Button
                android:id="@+id/btMainEqual"
                style="@style/EqualStyle"
                android:text="@string/btMainEqual" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>